--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,17 @@
 #   http://lint.travis-ci.org/
 language: python
 sudo: false
-
+arch:
+    - amd64
+    - arm64
 env:
   global:
     # Use non-interactive backend
     - MPLBACKEND: Agg
     - CYTHON_TRACE: 1
+    - NUMPYSPEC=numpy
+    - MATPLOTLIBSPEC=matplotlib
+    - CYTHONSPEC=cython
 
 matrix:
   include:
@@ -18,16 +23,29 @@ matrix:
         - MATPLOTLIBSPEC=matplotlib
         - CYTHONSPEC=cython
         - USE_WHEEL=1
+    - arch: arm64
+      os: linux
+      python: 3.6
+      env:
+        - NUMPYSPEC=numpy
+        - MATPLOTLIBSPEC=matplotlib
+        - CYTHONSPEC=cython
+        - USE_WHEEL=1
     - os: linux
       python: 3.7
+      dist: xenial # travis-ci/travis-ci/issues/9815
+      sudo: true
       env:
         - NUMPYSPEC=numpy
         - MATPLOTLIBSPEC=matplotlib
         - CYTHONSPEC=cython
         - USE_SDIST=1
         - USE_SCIPY=1
-    - os: linux
-      python: 3.8
+    - arch: arm64
+      os: linux
+      python: 3.7
+      dist: bionic # travis-ci/travis-ci/issues/9815
+      sudo: true
       env:
         - NUMPYSPEC=numpy
         - MATPLOTLIBSPEC=matplotlib
@@ -48,7 +66,6 @@ matrix:
         - MATPLOTLIBSPEC=matplotlib
         - CYTHONSPEC=cython
         - TRAVIS_PYTHON_VERSION=3.5
-
 cache: pip
 
 before_install:
@@ -58,12 +75,14 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then source util/travis_osx_install.sh; fi
   - ccache -s
   - which python; python --version
-  - pip install --upgrade pip wheel setuptools
+  - pip install --upgrade pip
+  - pip install --upgrade wheel
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install libatlas-base-dev; fi
   # Set numpy version first, other packages link against it
   - pip install $NUMPYSPEC
   - pip install $MATPLOTLIBSPEC
   - pip install $CYTHONSPEC
-  - pip install pytest pytest-cov coverage codecov
+  - pip install pytest pytest-cov coverage codecov futures
   - set -o pipefail
   - if [ "${USE_WHEEL}" == "1" ]; then pip install wheel; fi
   - if [ "${USE_SCIPY}" == "1" ]; then pip install scipy; fi
