--- a/.travis.yml
+++ b/.travis.yml
@@ -122,7 +122,7 @@ script:
         CFLAGS="--coverage" pip install -e . -v
         pushd demo
         pytest --pyargs pywt --cov=pywt --cov-config=../.coveragerc
-        cp .coveragerc ..
+        cp .coverage ..
         popd
     fi
 
